# workout-tracker

./: .dockerignore  Dockerfile  LICENSE  README.md  compose.yml  manage.py  pyproject.toml  requirements.txt
accounts/: forms.py  urls.py  views.py
accounts/templates/: change_password.html  edit_profile.html  login.html  profile.html  register.html
templates/: 404.html  base.html
tracker/: admin.py  forms.py  models.py  urls.py  views.py
tracker/migrations/: 0001_initial.py  0002_workout_user.py  0003_alter_workout_user.py
tracker/templates/: home.html  log_workout.html  workout_history.html
workoutlog/: asgi.py  settings.py  urls.py  wsgi.py
